<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">你是我的小苹果</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">你爱小苹果吗？</string>
    <string name="stra">点击最下面的小苹果开吃</string>
    <string name="strb">吃</string>
    <string name="strc">30秒内看你能吃掉多少个</string>
    <string name="strd">小苹果！</string>
    <string name="stre">请先选择你喜欢的模式</string>
    <string name="strh">请先选择你喜欢的玩法</string>
    <string name="strg">为了大奖</string>
    <string name="classic_result">呵呵！我吃掉了%d个小苹果！</string>
    <string name="speed_result">吼吼！100个小苹果，我才花了%s秒！</string>
    <string name="strf">亲加油哦！</string>
    <string name="str_high_score">亲快炫耀一下!</string>
    <string name="best">最高纪录: %d</string>
    <string name="speed_best">最高纪录: %s</string>
    <string name="start">经典，上！</string>
    <string name="speed_start">竞速，上!</string>
    <string name="endless_start">无尽，上!</string>
    <string name="gravity_start">下落，上!</string>
    <string name="restart">再挑战一次</string>
    <string name="time_out">时间到！</string>
    <string name="speed_success">挑战成功！</string>
    <string name="speed_fail">挑战失败！</string>
    <string name="speed_rank_none">无</string>
    <string name="press_twice_to_exit">再按一次退出</string>
    <string name="rank_of_week">小苹果排行榜</string>
    <string name="rank">排名</string>
    <string name="nicky_name">昵称</string>
    <string name="score">成绩</string>
    <string name="input_nicky_name">请输入你的昵称, 那样获奖之后，你才可以领奖哦~</string>
    <string name="confirm">确定</string>
    <string name="me">我:</string>
    <string name="network_error">网络异常</string>
    <string name="news">新闻</string>
    <string name="check_rank">排行榜</string>
	<string name="share">截图炫耀</string>
    <string name="back">返回</string>
    <string name="my_rank_of_current_week">本周排名: %d</string>
    <string name="my_total_award">累计奖金: %d</string>
    <string name="my_rank_of_last_week">上周排名: %d</string>
    <string name="my_award_of_last_week">上周奖金: %d</string>
    <string name="last_week_no_rank">上周排名: 千里之外</string>
    <string name="current_week_no_rank">本周排名: 千里之外</string>
    <string name="rank_of_current_week">本周排行榜</string>
    <string name="award_of_last_week">上周获奖名单</string>
    <string name="accept_award">领奖</string>
    <string name="award">奖金</string>
    <string name="no_award">未获奖</string>
    <string name="have_accept_award">已领取</string>
    <string name="last_week_no_competition">上周未开赛</string>
    <string name="competition_over">比赛已结束</string>
    <string name="current_week_tmp_no_rank">本周暂无排名</string>
    <string name="no_rank_info">无</string>
    <string name="current_week_no_rank_list">暂无排名</string>
    <string name="input_phone_number">手机号码</string>
    <string name="accept_award_prompt">请输入您的手机号码，我们将在24小时内为您充值~</string>
    <string name="invalid_phone_number">手机号错误~</string>
    <string name="award_value">奖金: %d</string>
    <string name="accept_award_success">24小时之内到帐哦~</string>
    <string name="competition_start">小苹果挑战赛已开始，请点击排行榜查看获奖信息</string>
    <string name="go_dead">去死</string>
    <string name="recover">复活</string>
    <string name="recover_prompt">安装广告，可原地复活</string>
    <string name="capture_screen_ok">截图已保存到SD卡了，快去分享吧</string>
    <string name="type_time_30">30秒</string>
    <string name="type_time_15">15秒</string>
    <string name="type_mine">地雷</string>
    <string name="type_discontinuous">不连续</string>
    <string name="type_double">双飞</string>
    <string name="type_endless">无尽</string>
    <string name="type_speed">竞速</string>
    <string name="type_relay">接力</string>
    <string name="type_loom">若隐若现</string>
    <string name="type_move">苹果在哪</string>
    <string name="type_terrible_double">双指齐下</string>
    <string name="type_terrible_2">那个二</string>
    <string name="mode_classic">经典</string>
    <string name="mode_gravity">重力</string>
    <string name="mode_terrible">凌乱</string>
    <string name="current_mode_level">%1$s~%2$s</string>
    <string name="current_mode_type_level">%1$s~%2$s~%3$s</string>
    <string name="level_setting">难度设置</string>
    <string name="level_intro">请选择合适的难度</string>
    <string name="level_easy_info">简单级别适合练习</string>
    <string name="level_hard_info">困难级别可参加挑战赛,赢取话费大奖</string>
    <string name="level_easy">简单</string>
    <string name="level_hard">困难</string>
    <string name="sd_not_found">SD卡不存在</string>
    <string name="share_title">哈哈，玩游戏，赢话费大奖了!你是我的小苹果:%s</string>
    <string name="share_comment">呵呵，玩游戏赢话费了</string>
    <string name="exit_title">亲，玩累了</string>
    <string name="exit_text">最近新出了很多好玩的游戏哦，去不去看看？</string>
    <string name="exit_cancel">取消</string>
    <string name="exit_ok">退出</string>
    <string name="update_title">发现新版本</string>
    <string name="update_text">新版本更好玩，升级？</string>
    <string name="update_cancel">不了</string>
    <string name="update_ok">升级</string>
    <string name="update_prompt">下载完成后，请手动点击安装哦~</string>
    <string name="level_normal">一般</string>
    <string name="classic_intro">只能点倒数第二排的小苹果哦,否则~</string>
    <string name="gravity_intro">从下往上收割，别错过任何小苹果~</string>
    <string name="gravity_mine_intro">从下往上收割，千万别点到地雷~</string>
    <string name="award_intro">高分可赢话费大奖哦，加油!!!</string>
    <string name="mode_classic_intro">经典模式下，小苹果不会自动下落，点击时才下落</string>
    <string name="mode_gravity_intro">重力模式下，小苹果会自动下落</string>
    <string name="flappy_bird">小鸟爱吃苹果</string>
    <string name="flappy_bird_result">吼吼，我的小鸟赢了%d分</string>
    <string name="flappy_runner_result">吼吼，我的小苹果会跨栏哦，得了%d分</string>
    <string name="runner">小苹果爱跨栏</string>
    <string name="more_games">更多游戏</string>
    <string name="accept_award_toast">请加QQ群领奖</string>
    <string name="block_row_count">请选择你喜欢的栏数</string>
    <string name="run_start">点击开始</string>
    <string name="run_caution">别撞到栏杆哦</string>
    <string name="block_row_one">单排</string>
    <string name="block_row_double">双排</string>
    <string name="block_up_down">上蹿下跳</string>
    <string name="block_up_down_plus">上蹿下跳+</string>
    <string name="relay_intro">10s后，开启重力</string>
    <string name="loom_intro">小苹果消失之前，记住它的位置</string>
    <string name="move_intro">到手的苹果也会飞，手别太快</string>
    <string name="terrible_double_intro">一大波小苹果正在靠近，最好双指齐下～</string>
    <string name="terrible_2_intro">那个看起来很二的小苹果，需要点二次哦～</string>
    <string name="download">下载</string>
    <string name="block_up_down_plus_intro">小苹果落地之后，才能上窜下跳～</string>
    <string name="block_up_down_intro">小苹果落地之前，即可上窜下跳～</string>
    <string name="flappy_bird_intro">小鸟飞呀飞，小心别撞死哦~</string>
    <string name="flappy_runner_intro">跳过每一个障碍物，注意把握时机~</string>
    <string name="flappy_runner_double_intro">跳过每一个障碍物，两个小苹果可以同时起跳哦~</string>
    <string name="intro">说明:</string>
</resources>
