<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/runner_select_layer"
    android:background="#e0576069"
    >
    <TextView 
        android:id="@+id/current_mode_level_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_marginLeft="10dip"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:text="@string/current_mode_level"
        android:textColor="@color/yellow"
        android:visibility="gone"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
    	android:gravity="center"
        android:orientation="vertical" >


	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:textAppearance="?android:attr/textAppearanceMedium" 
	        android:text="@string/block_row_count"
	        android:textColor="@color/white"
	        />

	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/run_start"
	        android:textColor="@color/yellow"
	        />

	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:layout_gravity="center_horizontal"
	        android:textAppearance="?android:attr/textAppearanceMedium" 
	        android:text="@string/run_caution"
	        android:textColor="@color/white"
	        />
	    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:visibility="gone"
	        android:layout_marginTop="5dip"
	        android:layout_gravity="center_horizontal"
	        android:textAppearance="?android:attr/textAppearanceMedium" 
	        android:text="@string/strc"
	        android:textColor="@color/white"
	        />
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dip"
	        android:visibility="gone"
	        android:layout_gravity="center_horizontal"
	        android:textAppearance="?android:attr/textAppearanceMedium" 
	        android:text="@string/strd"
	        android:textColor="@color/white"
	        />

	    <Button
	        android:id="@+id/startDiscontinuousButton"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="10dip"
	        android:background="@color/red"
	        android:onClick="onSingleRowButtonClick"
	        android:text="@string/block_row_one"
	        android:textColor="@color/white" />
	    <Button
	        android:id="@+id/startDoubleButton"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="10dip"
	        android:background="@color/red"
	        android:onClick="onDoubleRowButtonClick"
	        android:text="@string/block_row_double"
	        android:textColor="@color/white" />

	    <Button
	        android:id="@+id/startUpDownButton"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="10dip"
	        android:background="@color/red"
	        android:onClick="onUpDownButtonClick"
	        android:text="@string/block_up_down"
	        android:textColor="@color/white" />
	    <Button
	        android:id="@+id/backButton"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="10dip"
	        android:background="#993366"
	        android:onClick="onBackButtonClick"
	        android:text="@string/back"
	        android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
