<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/type_select_layer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0576069"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/current_mode_level_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="5dip"
        android:text="@string/current_mode_level"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/yellow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/strh"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dip"
            android:text="@string/strg"
            android:textColor="@color/yellow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dip"
            android:text="@string/stra"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dip"
            android:text="@string/strc"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dip"
            android:text="@string/strd"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/classic_gravity_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/start30sButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:background="@color/red"
                android:onClick="onStart30sButtonClick"
                android:text="@string/type_time_30"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/startEndlessButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:background="@color/red"
                android:onClick="onStartEndlessButtonClick"
                android:text="@string/type_endless"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/startSpeedButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:background="@color/red"
                android:onClick="onStartSpeedButtonClick"
                android:text="@string/type_speed"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/startMineButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:background="@color/red"
                android:onClick="onStartMineButtonClick"
                android:text="@string/type_mine"
                android:textColor="@color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/startDiscontinuousButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:background="@color/red"
                android:onClick="onStartDiscontinuousButtonClick"
                android:text="@string/type_discontinuous"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/startDoubleButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:background="@color/red"
                android:onClick="onStartDoubleButtonClick"
                android:text="@string/type_double"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/terrible_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical" >

            <Button
                android:id="@+id/startRelayButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:background="@color/red"
                android:onClick="onStartRelayButtonClick"
                android:text="@string/type_relay"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/startLoomButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:background="@color/red"
                android:onClick="onStartLoomButtonClick"
                android:text="@string/type_loom"
                android:textColor="@color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/backButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dip"
            android:background="#993366"
            android:onClick="onBackButtonClick"
            android:text="@string/back"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>