<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
	android:layout_gravity="center"
	android:id="@+id/resultLayer"
	android:visibility="invisible"
	android:background="@color/darkgray"
    tools:context="com.echo.littleapple.MainActivity$PlaceholderFragment" >
    
	    <TextView 
	        android:id="@+id/resultTV"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="50dip"
	        android:textAppearance="?android:attr/textAppearanceMedium" 
	        android:textColor="@color/white"
	        />
	    <TextView 
	        android:id="@+id/promptTV"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dip"
	        android:layout_gravity="center_horizontal"
	        android:textAppearance="?android:attr/textAppearanceMedium" 
	        android:text="@string/strf"
	        android:textColor="@color/white"
	        />
	    <TextView 
	        android:id="@+id/bestTV"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="30dip"
	        android:layout_gravity="center_horizontal"
	        android:textAppearance="?android:attr/textAppearanceMedium" 
	        android:text="@string/best"
	        android:textColor="@color/white"
	        />

	    <Button
	        android:id="@+id/restartButton"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="15dip"
	        android:background="@color/red"
	        android:textColor="@color/white"
	        android:text="@string/restart" 
	        android:onClick="onRestartButtonClick"
	        />
	    <Button
	        android:id="@+id/sharetButton"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="15dip"
	        android:background="@color/red"
	        android:textColor="@color/white"
	        android:text="@string/share" 
	        android:onClick="onShareButtonClick"
	        />
	    <Button
	        android:id="@+id/rankButton"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="15dip"
	        android:background="@color/red"
	        android:textColor="@color/white"
	        android:text="@string/check_rank" 
	        android:onClick="onRankButtonClick"
	        />

	    <Button
	        android:id="@+id/backButton"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="15dip"
	        android:background="@color/red"
	        android:textColor="@color/white"
	        android:text="@string/back" 
	        android:onClick="onBackButtonClick"
	        />

	    <TextView
	        android:paddingTop="10dip"
	        android:alpha="0.6"
	        android:paddingLeft="10dip"
	        android:paddingRight="10dip"
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        android:text="@string/competition_start"
	        android:gravity="center_horizontal"
	        android:layout_weight="1"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	      <FrameLayout
            android:id="@+id/banner_ad_container"
            android:layout_width="match_parent"
            android:layout_height="80dip"/>

</LinearLayout>
